# bebe-ai

./: Cargo.toml  README.md  chunks.json
public/: index.html
src/: document.rs  embedding.rs  lib.rs  llm.rs
src/document/: mv.rs
src/embedding/: similarity.rs
src/embedding/similarity/: naive.rs
