[package]
name = "bebe-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
scraper = "0.23"
itertools = "0.14.0"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
